--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ table, th, td {
     border-collapse: collapse;
   }
   th, td {
-    background-color: #96D4D4;
+    background-color: #a95c89;
   }
