--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ h2 {
     color:brown;
 }
 table, th, td {
-    border: 1px solid white;
+    border: 2px solid rgb(15, 15, 15);
     border-collapse: collapse;
+    border-spacing: 30px;
   }
   th, td {
     background-color: #a95c89;
