--- a/styleUC.css
+++ b/styleUC.css
@@ -1,3 +1,6 @@
-.description{
-    background-color: rgb(172, 172, 89);
+.name{
+    font-size: 45px;
+    font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 0;
 }
