--- a/styleUC.css
+++ b/styleUC.css
@@ -12,10 +12,10 @@
 .card:hover{
     box-shadow: 0 14px 18px 0 rgba(0, 0, 0, 0.2);
 }
-.childImage{
+/* .childImage{
     width: 70%;
     height: 5%;
-}
+} */
 .name{
     font-size: 30px;
     font-weight: bold;
